<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.ui.profile.ProfileFragment">


    <LinearLayout
        android:id="@+id/layout_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="-6dp"
        android:layout_marginEnd="-4dp"
        android:background="@drawable/background_bottom_rounded"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/iv_user"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/profile_circle_background"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="100sp"
            android:textStyle="bold"
            tools:text="B" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Username" />

        <TextView
            android:id="@+id/tv_nik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="NIK" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/dot"
                android:textColor="@color/black"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_github_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github_username"
                android:textColor="@color/black"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_profile_setting"
        android:drawableEnd="@drawable/ic_next"
        android:drawablePadding="20dp"
        android:drawableTint="@android:color/holo_red_dark"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingHorizontal="30dp"
        android:text="@string/log_out"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/layout_profile" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Profile"
        app:titleTextColor="@color/black" />
</androidx.constraintlayout.widget.ConstraintLayout>